--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf dist cdk.out node_modules",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
