--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.145.0",
+    "cdk-monitoring-constructs": "^7.11.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
