Add Consent Management API lambda monitoring
Add monitoring for the Consent Management API
Lambda function, including:
* Metric graphs on the detailed ops dashboard
* Alarm for concurrent executions breaching 800
so we know to request a quota increase
* Alarm for average memory utilization > 90%
* Alarm for fault count > 0
* Alarm for p90 latency > 50ms
* Alarm for throttling count > 0

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   },
   "scripts": {
     "build": "tsc",
+    "cdk": "cdk",
     "clean": "rm -rf dist cdk.out node_modules",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
+    "test": "npm run build && jest",
+    "update-snapshots": "npm run build && jest -u",
+    "watch": "tsc -w"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
