--- a/package.json
+++ b/package.json
@@ -13,18 +13,17 @@
     "watch": "tsc -w"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "20.12.7",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.12.7",
     "aws-cdk": "~2.1004.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
   "dependencies": {
     "aws-cdk-lib": "~2.184.1",
     "cdk-monitoring-constructs": "^9.2.0",
-    "constructs": "^10.4.0",
-    "source-map-support": "^0.5.21"
+    "constructs": "^10.4.2"
   }
 }
