--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,10 @@ jobs:
       - name: Checkout CDK package
         uses: actions/checkout@v4
         with:
-          path: '../'
+          repository: 'Consent-Management-Platform/consent-management-api-cdk'
+          path: 'consent-management-api-cdk'
+      - name: CD into CDK package
+        run: cd consent-management-api-cdk
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
