Add test step to validate cdk outputs present

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,3 +68,6 @@ jobs:
         run: |
           npm test
           npx cdk synth
+      - name: Validate CDK outputs present
+        run: |
+          ls -l cdk.out/*.json
