--- a/.github/actions/synthesizeStacks/action.yml
+++ b/.github/actions/synthesizeStacks/action.yml
@@ -52,6 +52,7 @@ runs:
         npm install -g aws-cdk
         cdk --version
         aws --version
+      shell: bash
       working-directory: consent-management-api-cdk
     - name: Validate dependency artifacts present
       run: |
@@ -59,14 +60,17 @@ runs:
         ls -l ../consent-management-api/build/distributions/consent-management-api.zip
         ls -l ../consent-history-ingestor/build/distributions
         ls -l ../consent-history-ingestor/build/distributions/consent-history-ingestor.zip
+      shell: bash
       working-directory: consent-management-api-cdk
     - name: Build CDK package and run tests
       run: npm test
+      shell: bash
       working-directory: consent-management-api-cdk
     - name: Synthesize CDK stacks
       run: npx cdk synth
+      shell: bash
       working-directory: consent-management-api-cdk
     - name: Validate CDK outputs present
-      run: |
-        ls -l cdk.out/*.json
+      run: ls -l cdk.out/*.json
+      shell: bash
       working-directory: consent-management-api-cdk
