Fix GitHub workflows to pass in required env vars
Update the synthesizeStacks GitHub Action to take
AWS account ID and AWS region as inputs, and use
these to set the required CONSENT_DEV_ACCOUNT_ID
and CONSENT_DEV_REGION environment variables
expected by the CDK package code.

Update the test and deploy GitHub Workflows to
correctly pass in these values to the GitHub
Action, where these are arbitrary values for
the test workflow, and provided by the user
through the GitHub UI for the deploy action.

--- a/.github/actions/synthesizeStacks/action.yml
+++ b/.github/actions/synthesizeStacks/action.yml
@@ -1,6 +1,12 @@
 name: Synthesize CDK stacks
 
 inputs:
+  aws-account-id:
+    description: 'AWS account to synthesize CloudFormation stack templates for'
+    required: true
+  aws-region:
+    description: 'AWS region to synthesize CloudFormation stack templates for'
+    required: true
   github-token:
     description: 'GitHub token for authentication'
     required: true
@@ -66,10 +72,16 @@ runs:
       run: npm test
       shell: bash
       working-directory: consent-management-api-cdk
+      env:
+        CONSENT_DEV_ACCOUNT_ID: ${{ inputs.aws-account-id }}
+        CONSENT_DEV_REGION: ${{ inputs.aws-region }}
     - name: Synthesize CDK stacks
       run: npx cdk synth
       shell: bash
       working-directory: consent-management-api-cdk
+      env:
+        CONSENT_DEV_ACCOUNT_ID: ${{ inputs.aws-account-id }}
+        CONSENT_DEV_REGION: ${{ inputs.aws-region }}
     - name: Validate CDK outputs present
       run: ls -l cdk.out/*.json
       shell: bash
