--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,7 @@ jobs:
       - name: Build and synthesize stacks
         uses: ./.github/actions/synthesizeStacks
         with:
+          aws-account-id: 123456789012
+          aws-region: us-west-2
           github-token: ${{ secrets.GITHUB_TOKEN }}
           github-username: ${{ github.actor }}
