Update test workflow trigger, update docs
Update the test GitHub Workflow to only trigger when there
have been code or config changes in this repository.

Bring markdown docs up to date, and add GitHub Workflow
status badges to README.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,13 @@
 # This GitHub workflow will automatically build and test code changes
 name: Test
 on:
-  # Run automatically for all pushes to the remote repository
+  # Run automatically when pushing code or config changes
   push:
+    paths:
+      - '**.json'
+      - '**.ts'
+      - '**.ts.snap'
+      - '**.yml'
   # Run automatically for all pull requests
   pull_request:
   # Enable running as a subset of another GitHub Workflow
