--- a/.github/workflows/generateApiClients.yml
+++ b/.github/workflows/generateApiClients.yml
@@ -67,3 +67,12 @@ jobs:
         run: |
           cp -r consent-management-api-java-client/generated-code/* auto-generated-java-client
           ls -al auto-generated-java-client
+      - name: Commit and push auto-generated Java client SDK code
+        run: |
+          cd auto-generated-java-client
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Update auto-generated Java client SDK for Consent Management API"
+          git push
+          cd ..
