--- a/.github/workflows/generateApiClients.yml
+++ b/.github/workflows/generateApiClients.yml
@@ -74,5 +74,5 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "Update auto-generated Java client SDK for Consent Management API"
-          git push
+          git push https://${GITHUB_TOKEN}@github.com/Consent-Management-Platform/consent-management-api-java-sdk.git
           cd ..
