--- a/.github/workflows/generateApiClients.yml
+++ b/.github/workflows/generateApiClients.yml
@@ -72,7 +72,8 @@ jobs:
           cd auto-generated-java-client
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global http.extraheader "AUTHORIZATION: Bearer ${GITHUB_TOKEN}"
           git add .
           git commit -m "Update auto-generated Java client SDK for Consent Management API"
-          git push https://${GITHUB_TOKEN}@github.com/Consent-Management-Platform/consent-management-api-java-sdk.git
+          git push
           cd ..
