--- a/.github/workflows/generateApiClients.yml
+++ b/.github/workflows/generateApiClients.yml
@@ -26,33 +26,33 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@master
-        with:
-          aws-region: ${{ github.event.inputs.AWS_REGION }}
-          role-to-assume: arn:aws:iam::${{ github.event.inputs.AWS_ACCOUNT_ID }}:role/github-ci-role
-      - name: Retrieve API Gateway ID for the Consent Management API
-        id: get-consent-management-api-gateway-id
-        run: |
-          apiGatewayId=$(aws cloudformation list-exports \
-            --region ${{ github.event.inputs.AWS_REGION }} \
-            --query "Exports[?Name == 'ConsentManagementApiGatewayId'].Value" \
-            | jq .[0])
-          echo "CONSENT_MANAGEMENT_API_GATEWAY_ID=${apiGatewayId}" >> "$GITHUB_OUTPUT"
-      - name: Query Consent Management API Gateway for Java client SDK
-        run: |
-          aws apigateway get-sdk \
-            --region ${{ github.event.inputs.AWS_REGION }} \
-            --rest-api-id ${{ steps.get-consent-management-api-gateway-id.outputs.CONSENT_MANAGEMENT_API_GATEWAY_ID }} \
-            --stage-name ${{ github.event.inputs.API_STAGE_NAME }} \
-            --sdk-type java \
-            --parameters service.name=ConsentManagementApi,java.package-name='com.consentframework.consentmanagement.sdk',java.build-system='gradle',java.group-id='com.consentframework',java.artifact-id='consent-management-api-java-sdk',java.artifact-version='0.0.1' \
-            consent-management-api-java-client.zip
-      - name: Archive Java client SDK zip file
-        uses: actions/upload-artifact@v4
-        with:
-          name: consent-management-api-java-client
-          path: consent-management-api-java-client.zip
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@master
+      #   with:
+      #     aws-region: ${{ github.event.inputs.AWS_REGION }}
+      #     role-to-assume: arn:aws:iam::${{ github.event.inputs.AWS_ACCOUNT_ID }}:role/github-ci-role
+      # - name: Retrieve API Gateway ID for the Consent Management API
+      #   id: get-consent-management-api-gateway-id
+      #   run: |
+      #     apiGatewayId=$(aws cloudformation list-exports \
+      #       --region ${{ github.event.inputs.AWS_REGION }} \
+      #       --query "Exports[?Name == 'ConsentManagementApiGatewayId'].Value" \
+      #       | jq .[0])
+      #     echo "CONSENT_MANAGEMENT_API_GATEWAY_ID=${apiGatewayId}" >> "$GITHUB_OUTPUT"
+      # - name: Query Consent Management API Gateway for Java client SDK
+      #   run: |
+      #     aws apigateway get-sdk \
+      #       --region ${{ github.event.inputs.AWS_REGION }} \
+      #       --rest-api-id ${{ steps.get-consent-management-api-gateway-id.outputs.CONSENT_MANAGEMENT_API_GATEWAY_ID }} \
+      #       --stage-name ${{ github.event.inputs.API_STAGE_NAME }} \
+      #       --sdk-type java \
+      #       --parameters service.name=ConsentManagementApi,java.package-name='com.consentframework.consentmanagement.sdk',java.build-system='gradle',java.group-id='com.consentframework',java.artifact-id='consent-management-api-java-sdk',java.artifact-version='0.0.1' \
+      #       consent-management-api-java-client.zip
+      # - name: Archive Java client SDK zip file
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: consent-management-api-java-client
+      #     path: consent-management-api-java-client.zip
       - name: Unzip Java client SDK
         run: |
           unzip -q consent-management-api-java-client.zip -d consent-management-api-java-client
@@ -70,9 +70,8 @@ jobs:
       - name: Commit and push auto-generated Java client SDK code
         run: |
           cd auto-generated-java-client
-          git config --unset-all http.https://github.com/.extraheader
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "${GITHUB_USER}"
+          git config user.email "${GITHUB_EMAIL}"
           git add .
           git commit -m "Update auto-generated Java client SDK for Consent Management API"
           git push
