--- a/.github/workflows/generateApiClients.yml
+++ b/.github/workflows/generateApiClients.yml
@@ -73,8 +73,9 @@ jobs:
       - name: Commit and push auto-generated Java client SDK code
         run: |
           cd auto-generated-java-client
-          git config user.name "${GITHUB_USER}"
-          git config user.email "${GITHUB_EMAIL}"
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global credential.helper store
           git add .
           git commit -m "Update auto-generated Java client SDK for Consent Management API"
           git push
