--- a/.github/workflows/integTest.yml
+++ b/.github/workflows/integTest.yml
@@ -48,9 +48,16 @@ jobs:
           echo "LIST_API_RESOURCE_ID=${listServiceUserConsentsResourceId}" >> "$GITHUB_OUTPUT"
       - name: Invoke ListServiceUserConsents API
         run: |
-          aws apigateway test-invoke-method \
+          listApiResponse=$(aws apigateway test-invoke-method \
             --region ${{ github.event.inputs.AWS_REGION }} \
             --rest-api-id ${{ steps.get-consent-management-api-gateway-id.outputs.CONSENT_MANAGEMENT_API_GATEWAY_ID }} \
             --resource-id ${{ steps.get-consent-management-api-resource-ids.outputs.LIST_API_RESOURCE_ID }} \
             --http-method GET \
-            --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents"
+            --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents")
+          echo $listApiResponse
+          if echo $listApiResponse | jq -e '.status == 200' > /dev/null; then
+            echo "List API invocation succeeded"
+          else
+            echo "List API invocation failed"
+            exit 1
+          fi
