--- a/.github/workflows/integTest.yml
+++ b/.github/workflows/integTest.yml
@@ -54,10 +54,19 @@ jobs:
             --resource-id ${{ steps.get-consent-management-api-resource-ids.outputs.LIST_API_RESOURCE_ID }} \
             --http-method GET \
             --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents")
-          echo $listApiResponse
           if echo $listApiResponse | jq -e '.status == 200' > /dev/null; then
-            echo "List API invocation succeeded"
+            echo "ListServiceUserConsents API invocation succeeded"
           else
-            echo "List API invocation failed"
+            echo "ListServiceUserConsents API invocation failed"
+            echo $listApiResponse
+            exit 1
+          fi
+          listApiResponseBody=$(echo $listApiResponse | jq '.body')
+          returnedConsents=$(echo $listApiResponseBody | sed 's/\\"/"/g' | sed 's/^"//;s/"$//' | jq .data)
+          if echo $returnedConsents | jq 'type == "array"' > /dev/null; then
+            echo "Validation passed: successfully returned an array of consents"
+          else
+            echo "Validation failed: did not return an array of consents"
+            echo "API response body: $listApiResponseBody"
             exit 1
           fi
