--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 # This GitHub workflow will automatically build and test code changes
-name: Test
+name: Build
 on:
   # Run automatically when pushing code or config changes
   push:
