--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,3 +50,8 @@ jobs:
         env:
           CONSENT_DEV_ACCOUNT_ID: ${{ github.event.inputs.AWS_ACCOUNT_ID }}
           CONSENT_DEV_REGION: ${{ github.event.inputs.AWS_REGION }}
+      - name: Run Consent Management API integ tests
+        uses: ./.github/actions/consentManagementIntegTests
+        with:
+          aws-account-id: ${{ github.event.inputs.AWS_ACCOUNT_ID }}
+          aws-region: ${{ github.event.inputs.AWS_REGION }}
