--- a/.github/actions/consentManagementIntegTests/action.yml
+++ b/.github/actions/consentManagementIntegTests/action.yml
@@ -70,7 +70,7 @@ runs:
           --resource-id ${{ steps.get-consent-management-api-resource-ids.outputs.CONSENTS_API_RESOURCE_ID }} \
           --http-method POST \
           --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents" \
-          --body "{\"status\":\"REVOKED\",\"consentType\":\"testConsentType\",\"consentData\":{\"testKey1\":\"testValue1\"}}")
+          --body "{\"status\":\"REVOKED\",\"consentType\":\"testConsentType\",\"consentData\":{\"testKey1\":\"testValue1\",\"testKey2\":\"testValue2\"}}")
         if [ "$(echo "${createConsentApiResponse}" | jq -e '.status == 200')" == "true" ]; then
           echo "CreateServiceUserConsent API invocation succeeded"
         else
@@ -124,5 +124,71 @@ runs:
           echo "GetServiceUserConsent API response consent data: ${returnedConsentData}"
           exit 1
         fi
+        if [ "$(echo "${returnedConsentData}" | jq '.consentVersion == 1')" != "true" ]; then
+          echo "GetServiceUserConsent API validation failed: consent data did not match expected consentVersion 1"
+          echo "GetServiceUserConsent API response consent data: ${returnedConsentData}"
+          exit 1
+        fi
+        if [ "$(echo "${returnedConsentData}" | jq '.consentData == {"testKey1":"testValue1","testKey2":"testValue2"}')" != "true" ]; then
+          echo "GetServiceUserConsent API validation failed: consent data did not match expected consentData {\"testKey1\":\"testValue1\",\"testKey2\":\"testValue2\"}"
+          echo "GetServiceUserConsent API response consent data: ${returnedConsentData}"
+          exit 1
+        fi
         echo "GetServiceUserConsent API validation passed: successfully returned the expected consent"
+      shell: bash
+    - name: Test UpdateServiceUserConsent API
+      run: |
+        updateConsentApiResponse=$(aws apigateway test-invoke-method \
+          --region ${{ inputs.aws-region }} \
+          --rest-api-id ${{ steps.get-consent-management-api-gateway-id.outputs.CONSENT_MANAGEMENT_API_GATEWAY_ID }} \
+          --resource-id ${{ steps.get-consent-management-api-resource-ids.outputs.CONSENT_API_RESOURCE_ID }} \
+          --http-method POST \
+          --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents/${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}" \
+          --body "{\"status\":\"ACTIVE\",\"consentVersion\":2,\"consentData\":{\"testKey1\":\"testValue1_v2\",\"testKey3\":\"testValue3\"}}")
+        if [ "$(echo "${updateConsentApiResponse}" | jq -e '.status == 200')" == "true" ]; then
+          echo "UpdateServiceUserConsent API invocation succeeded"
+        else
+          echo "UpdateServiceUserConsent API invocation failed, response: ${updateConsentApiResponse}"
+          exit 1
+        fi
+        getConsentApiResponse=$(aws apigateway test-invoke-method \
+          --region ${{ inputs.aws-region }} \
+          --rest-api-id ${{ steps.get-consent-management-api-gateway-id.outputs.CONSENT_MANAGEMENT_API_GATEWAY_ID }} \
+          --resource-id ${{ steps.get-consent-management-api-resource-ids.outputs.CONSENT_API_RESOURCE_ID }} \
+          --http-method GET \
+          --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents/${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}")
+        if [ "$(echo "${getConsentApiResponse}" | jq -e '.status == 200')" == "true" ]; then
+          echo "GetServiceUserConsent API invocation succeeded"
+        else
+          echo "GetServiceUserConsent API invocation failed, response: ${getConsentApiResponse}"
+          exit 1
+        fi
+        getConsentApiResponse=$(echo ${getConsentApiResponse} | jq '.body')
+        returnedConsentData=$(echo ${getConsentApiResponse} | sed 's/\\"/"/g' | sed 's/^"//;s/"$//' | jq .data)
+        if [ "$(echo "${returnedConsentData}" | jq 'type == "object"')" != "true" ]; then
+          echo "GetServiceUserConsent API validation after update failed: did not return a consent object"
+          echo "GetServiceUserConsent API response body: ${getConsentApiResponse}"
+          exit 1
+        fi
+        if [ "$(echo "${returnedConsentData}" | jq '.consentId == ${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}')" != "true" ]; then
+          echo "GetServiceUserConsent API validation after update failed: consent data did not match expected consentId ${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}"
+          echo "GetServiceUserConsent API response consent data: ${returnedConsentData}"
+          exit 1
+        fi
+        if [ "$(echo "${returnedConsentData}" | jq '.status == "ACTIVE"')" != "true" ]; then
+          echo "GetServiceUserConsent API validation after update failed: consent data did not match expected status \"ACTIVE\""
+          echo "GetServiceUserConsent API response consent data: ${returnedConsentData}"
+          exit 1
+        fi
+        if [ "$(echo "${returnedConsentData}" | jq '.consentVersion == 2')" != "true" ]; then
+          echo "GetServiceUserConsent API validation after update failed: consent data did not match expected consentVersion 2"
+          echo "GetServiceUserConsent API response consent data: ${returnedConsentData}"
+          exit 1
+        fi
+        if [ "$(echo "${returnedConsentData}" | jq '.consentData == {"testKey1":"testValue1_v2","testKey3":"testValue3"}')" != "true" ]; then
+          echo "GetServiceUserConsent API validation failed: consent data did not match expected consentData {\"testKey1\":\"testValue1_v2\",\"testKey3\":\"testValue3\"}"
+          echo "GetServiceUserConsent API response consent data: ${returnedConsentData}"
+          exit 1
+        fi
+        echo "GetServiceUserConsent API validation after update passed: successfully returned the expected consent"
       shell: bash
